# kovi-plugin-mc-motd

./: Cargo.toml  README.md
src/: lib.rs  motd_be.rs  motd_je.rs  utils.rs
