
[package]
name = "kovi-plugin-mc-motd"
version = "0.1.11"
edition = "2024"
license = ""
authors = ["Chlna6666"]
description = "基于kovi的mcmotd"
categories = []
repository = "https://github.com/Chlna6666/kovi-plugin-mc-motd"
keywords = ["kovi", "kovi-plugin", "mc-motd", "minecraft"]


[dependencies]
kovi.workspace = true
tokio = "1.46.1"
trust-dns-resolver = "0.23.2"
byteorder = "1.5.0"
bytes = "1.10.1"
regex = "1.11.1"
lazy_static = "1.5.0"
